--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -12,9 +12,9 @@ jobs:
   build_and_unit_tests:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     - name: Use Node.js version 20.x
-      uses: actions/setup-node@v3
+      uses: actions/setup-node@v4
       with:
         node-version: 20.x
         cache: 'npm'
@@ -24,3 +24,20 @@ jobs:
       run: npm run test:unit
     - name: Display SoftUni username
       run: echo "sunko1993"
+  add_ui_tests:
+    runs-on: ubuntu-latest
+    needs: build_and_unit_tests
+    steps:
+    - uses: actions/checkout@v4
+    - name: Use Node.js version 20.x
+      uses: actions/setup-node@v4
+      with:
+        node-version: 20.x
+        cache: 'npm'
+    - name: Install the dependencies
+      run: npm install
+    - name: Install the dependencies
+      run: npx playwirght install
+    - name: Run unit tests
+      run: npm run test:ui
+
