--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -42,4 +42,14 @@ jobs:
       run: npx playwright install
     - name: Run unit tests
       run: npm run test:ui
+  deploy_on_render:
+    runs-on: ubuntu-latest
+    needs: add_ui_tests
+    steps:
+      - name: Deploy to production
+        uses: johnbeynon/render-deploy-action@v0.0.8
+        with:
+          service-id: ${{ secrets.MY_RENDER_SERVICE_ID }}
+          api-key: ${{ secrets.MY_RENDER_API_KEY }}
+
 
